syntax = "proto3";

package folonetrpc;

option go_package="./folonetrpc";

service ServerManager {
  rpc StartServer (StartServerRequest) returns (StartServerResponse) {}
  rpc StopServer (StopServerRequest) returns (StopServerResponse) {}
}

message StartServerRequest {
  string localEndpoint = 1;
}

message StopServerRequest {
  string localEndpoint = 1;
}

message StartServerResponse {
  string serverEndpoint = 1;
  bool active = 2;
  string name = 3;
}

message StopServerResponse {
}